--- a/APIAulaYoutube/appsettings.json
+++ b/APIAulaYoutube/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MinhaConexao": "Server=localhost;Database=AulaAPI;Uid=sa;Pwd=Z1e2s3r4g5t6o7s*"
+  }
 }
